@@ -3,7 +3,6 @@ package connection.server.database;
 import java.io.IOException;
 import java.net.URI;
 import java.net.URISyntaxException;
-import java.net.URL;
 import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
@@ -15,21 +14,19 @@ import java.sql.Statement;
 
 public class DatabaseInitializer {
 
-    public static void main(String args[]) {
+    public static void main(String[] args) {
 
-        String dbFile =  ClassLoader.getSystemResource("poker.db").getFile();
+        String path = System.getProperty("user.dir") + "/src/database/";
+        String dbFile =  path + "poker.db";
         try (Connection database = DriverManager.getConnection("jdbc:sqlite:" + dbFile)) {
             if (database != null) {
-                URI sqlURI = ClassLoader.getSystemResource("poker.sql").toURI();
-                Path sqlPath = Paths.get(sqlURI);
-                String sql = new String(Files.readAllBytes(sqlPath), StandardCharsets.UTF_8);
-                Statement stmt = database.createStatement();
-                stmt.execute(sql);
-                stmt.close();
+                String sqlFile = path + "poker.sql";
+                String sql = Files.readString(Paths.get(sqlFile));
+                database.createStatement().executeUpdate(sql);
 
                 System.out.println("Database initialized successfully.");
             }
-        } catch (SQLException | IOException | URISyntaxException e) {
+        } catch (SQLException | IOException e) {
             throw new RuntimeException(e);
         }
     }
